syntax = "proto3";

package com.road.yishi.proto.minigame;

message GemMazeBuyTimesRspMsg {
  int32 moveTimesLeft = 1;
  int32 buyTimesLeft = 2;
}
