syntax = "proto3";

package com.road.yishi.proto.minigame;

message GemMoveInviteReqMsg {
  int32 friendId = 1;
  int32 inviteTimes = 2;
  int32 helpNums = 3;
}
