syntax = "proto3";

package com.road.yishi.proto.minigame;

message GetRewardBoxMsg {
  int32 boxId = 1;
}
