syntax = "proto3";

package com.road.yishi.proto.minigame;

message GetRewardBoxRspMsg {
  int32 boxGetMark = 1;
  repeated int32 rewardInfo = 2;
}
