syntax = "proto3";

package com.road.yishi.proto.reward;

message RewardAddedMsg {
  int32 rewardId = 1;
}
